example/k8s/bank-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bank-service
  name: bank-service
spec:
  ports:
  - name: "8081"
    port: 8081
    targetPort: 8081
  selector:
    app: bank-service

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bank-service
  name: bank-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank-service
  template:
    metadata:
      labels:
        app.network/private-cloud-network: "true"
        app: bank-service
    spec:
      containers:
      - env:
        - name: spring.profiles.active
          value: dev
        - name: spring.cloud.config.uri
          value: http://config-server:8888
        image: bank-service:latest
        imagePullPolicy: Never
        name: bank-service
        ports:
        - containerPort: 8081
      restartPolicy: Always
