example/k8s/config-server-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: config-server
  name: config-server
spec:
  type: NodePort
  ports:
  - nodePort: 30111
    port: 8888
    targetPort: 8888
  selector:
    app: config-server
    
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: config-server
  name: config-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app.network/private-cloud-network: "true"
        app: config-server
    spec:
      containers:
      - image: config-server:latest
        imagePullPolicy: Never
        name: config-server
        ports:
        - containerPort: 8888
      restartPolicy: Always
