example/k8s/keycloak-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
  name: keycloak
spec:
  type: NodePort
  ports:
  - nodePort: 30114
    port: 8080
    targetPort: 8080
  selector:
    app: keycloak

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.network/private-cloud-network: "true"
        app: keycloak
    spec:
      containers:
      - args:
        - -b
        - 0.0.0.0
        - -Dkeycloak.profile.feature.upload_scripts=enabled
        - -Dkeycloak.import=/tmp/realm-api.json
        image: jboss/keycloak
        imagePullPolicy: IfNotPresent
        name: keycloak
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /tmp
          name: config-data
      volumes:
      - name: config-data
        configMap:
          name: keycloak-config
          items:
          - key: realm-api.json
            path: realm-api.json
      restartPolicy: Always
