example/k8s/kibana-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kibana
  name: kibana
spec:
  type: NodePort
  ports:
  - nodePort: 30112
    port: 5601
    targetPort: 5601
  selector:
    app: kibana

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kibana
  name: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app.network/private-cloud-network: "true"
        app: kibana
    spec:
      containers:
      - env:
        - name: ELASTICSEARCH_URL
          value: http://elasticsearch:9200
        image: docker.elastic.co/kibana/kibana:7.6.1
        imagePullPolicy: IfNotPresent
        name: kibana
        ports:
        - containerPort: 5601
      restartPolicy: Always
