example/k8s/logstash-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: logstash
  name: logstash
spec:
  ports:
  - name: "5000"
    port: 5000
    targetPort: 5000
  selector:
    app: logstash

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: logstash
  name: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app.network/private-cloud-network: "true"
        app: logstash
    spec:
      containers:
      - image: docker.elastic.co/logstash/logstash:7.6.1
        imagePullPolicy: IfNotPresent
        name: logstash
        ports:
        - containerPort: 5000
      restartPolicy: Always
