example/k8s/mongodb-deployment.yaml

apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongodb
  name: mongodb
spec:
  ports:
  - name: "27017"
    port: 27017
    targetPort: 27017
  selector:
    app: mongodb

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongodb
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.network/private-cloud-network: "true"
        app: mongodb
    spec:
      containers:
      - env:
        - name: MONGO_INITDB_DATABASE
          value: testDB
        - name: MONGO_INITDB_ROOT_PASSWORD
          value: admin
        - name: MONGO_INITDB_ROOT_USERNAME
          value: admin
        image: mongo:latest
        imagePullPolicy: IfNotPresent
        name: mongodb
        ports:
        - containerPort: 27017
        volumeMounts:
        - mountPath: /data/db
          name: mongodb-data
      restartPolicy: Always
      volumes:
      - name: mongodb-data
        persistentVolumeClaim:
          claimName: mongodb-data
