example/k8s/zipkin-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zipkin
  name: zipkin
spec:
  type: NodePort
  ports:
  - nodePort: 30113
    port: 9411
    targetPort: 9411
  selector:
    app: zipkin

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zipkin
  name: zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app.network/private-cloud-network: "true"
        app: zipkin
    spec:
      containers:
      - env:
        - name: ES_HOSTS
          value: elasticsearch:9200
        - name: STORAGE_TYPE
          value: elasticsearch
        image: openzipkin/zipkin
        imagePullPolicy: IfNotPresent
        name: zipkin
        ports:
        - containerPort: 9411
      restartPolicy: Always
