example/k8s/private-cloud-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: private-cloud-network
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.network/private-cloud-network: "true"
  podSelector:
    matchLabels:
      app.network/private-cloud-network: "true"
